# synology-lucene-client

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  SearchResults.cpp  SearchResults.h  SynoAnalyzer.cpp  SynoAnalyzer.h  SynoTerms.cpp  SynoTerms.h  crow.h  es-mappings.json  main.cpp  update-apk-repos.sh
